# vmware-cis-vsphere8-audit

./: .codecov.yml  .contributors-activation  .editorconfig  .flake8  .github-verified  .gitignore  .gpg-verified  .imgbotconfig  .markdownlint.json  .pre-commit-config.yaml  .security-status  .trivyignore  .ultra-secure-status  .workflow-trigger  AUDIT-REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION-STATUS.md  CONTRIBUTING.md  CONTRIBUTORS.md  FEATURES.md  FOLDER_REFRESH.md  FREE-TIER-OPTIMIZATION.md  LICENSE  MAINTENANCE.md  Makefile  README.md  SECURITY.md  TECHNICAL_NOTES.md  cis-vsphere8-audit.ps1  enhancement.md  mypy.ini  package.json  performance.md  pyproject.toml  requirements.txt
.amazonq/: config.yml
.github/: SECURITY.md  copilot.yml  dependabot.yml  pull_request_template.md  renovate.json  stale.yml  verified.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix.yml  ci.yml  contributors.yml  deploy.yml  quality.yml  release.yml  security-scan.yml  security.yml  weekly-activity.yml
docs/: .refresh  .refresh.md  BEST_PRACTICES.md  INSTALLATION.md  PULL-REQUEST-001.md  SCHEDULING.md  TROUBLESHOOTING.md  USAGE.md  VSPHERE8-AUDIT.md
examples/: .refresh.md  advanced-usage.ps1  basic-usage.ps1
tests/: .refresh.md  Run-Tests.ps1  test-enhancement.md
tests/Integration/: .refresh  .refresh.md  FullAudit.Tests.ps1
tests/TestHelpers/: .refresh  MockData.ps1
tests/Unit/: Host.Tests.ps1  VCenter.Tests.ps1  VM.Tests.ps1
