[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmware-cis-vsphere8-audit"
version = "1.0.0"
description = "VMware vSphere 8 CIS compliance audit tool for enterprise security assessment"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "uldyssian-sh", email = "25517637+uldyssian-sh@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Security"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.30.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/uldyssian-sh/vmware-cis-vsphere8-audit"
Repository = "https://github.com/uldyssian-sh/vmware-cis-vsphere8-audit"
Issues = "https://github.com/uldyssian-sh/vmware-cis-vsphere8-audit/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]# Updated 20251109_123817
